Avance para reporte de rendimiento de ventas

--- a/app/Views/reports/reports.twig
+++ b/app/Views/reports/reports.twig
@@ -9,15 +9,15 @@
 {% block content %}
 
     <div class="container-fluid">
+        {% if is_admin %}
         <div class="row">
-            {% if is_admin %}
             <div class="col-sm-4">
                 <div class="panel panel-primary">
                     <div class="panel-heading">
                         <h4 class="panel-title">Generar .PRN Para Sistema DET</h4>
                     </div>
-                    <div class="panel-body" method="get" target="_blank">
-                        <form action="/reportes/det">
+                    <div class="panel-body">
+                        <form action="/reportes/det" method="get" target="_blank">
                             <div class="form-group">
                                 <label for="year">Año a mostrar en el reporte</label>
                                 <input type="text" name="year" class="form-control" id="year" maxlength="4" required>
@@ -99,8 +99,26 @@
                     </div>
                 </div>
             </div>
-            {% endif %}
         </div>
+        <div class="row">
+            <div class="col-sm-4">
+                <div class="panel panel-primary">
+                    <div class="panel-heading">
+                        <h4 class="panel-title">Rendimiento de Ventas</h4>
+                    </div>
+                    <div class="panel-body">
+                        <form action="/reportes/rendimiento" method="get">
+                            <div class="form-group">
+                                <label for="fecha">Fecha a mostrar</label>
+                                <input type="date" name="fecha" class="form-control" id="fecha" required>
+                            </div>
+                            <button type="submit" class="btn btn-block btn-info">Generar Reporte</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+        {% endif %}
     </div>
 
 {% endblock %}
