--- a/app/Views/templates/base.twig
+++ b/app/Views/templates/base.twig
@@ -13,6 +13,7 @@
 
     <link rel="stylesheet" href="/css/form-clearinput.css">
     <link rel="stylesheet" href="/css/utility.css">
+    <link rel="stylesheet" href="/css/tableexport.css">
     <link rel="stylesheet" href="/js/trumbowyg/ui/trumbowyg.min.css">
     <link rel="stylesheet" href="/js/trumbowyg/plugins/colors/ui/trumbowyg.colors.min.css">
 
@@ -27,6 +28,12 @@
     <script src="/js/jquery-3.1.0.min.js"></script>
     <script src="/js/bootstrap.min.js" defer></script>
     <script src="/js/mustache.min.js" defer></script>
+
+    <script src="/js/jszip.js"></script>
+    <script src="/js/xlsx.core.js"></script>
+    <script src="/js/blob.js"></script>
+    <script src="/js/FileSaver.js"></script>
+    <script src="/js/tableexport.js"></script>
 
     <script src="/js/pubsub.js" defer></script>
     <script src="/js/alerts.js" defer></script>
