--- a/app/Views/reports/rendimiento.twig
+++ b/app/Views/reports/rendimiento.twig
@@ -32,7 +32,7 @@
                             <tr>
                                 <th></th>
                                 <th></th>
-                                <th colspan="3">Mes {{ mes.nombre }}</th>
+                                <th colspan="3" class="tableexport-string">Mes {{ mes.nombre }}</th>
                                 <th colspan="2">Mes</th>
                                 <th></th>
                                 <th></th>
@@ -56,17 +56,17 @@
                         <tbody>
                             {% for empleado in rendimiento %}
                             <tr>
-                                <td>{{ empleado.nombre }}</td>
-                                <td>{{ empleado.codigo }}</td>
-                                <td>{{ dia }}</td>
-                                <td>{{ empleado.dia.cantidad }}</td>
-                                <td>$ {{ empleado.dia.valor|number_format(2) }}</td>
-                                <td>1</td>
-                                <td>{{ mes.longitud }}</td>
-                                <td>{{ empleado.mes.cantidad }}</td>
-                                <td>$ {{ empleado.mes.valor|number_format(2) }}</td>
-                                <td>{{ empleado.ano.cantidad }}</td>
-                                <td>$ {{ empleado.ano.valor|number_format(2) }}</td>
+                                <td class="tableexport-string">{{ empleado.nombre }}</td>
+                                <td class="tableexport-string">{{ empleado.codigo }}</td>
+                                <td class="tableexport-string">{{ dia }}</td>
+                                <td class="tableexport-string">{{ empleado.dia.cantidad }}</td>
+                                <td class="tableexport-string">$ {{ empleado.dia.valor|number_format(2) }}</td>
+                                <td class="tableexport-string">1</td>
+                                <td class="tableexport-string">{{ mes.longitud }}</td>
+                                <td class="tableexport-string">{{ empleado.mes.cantidad }}</td>
+                                <td class="tableexport-string">$ {{ empleado.mes.valor|number_format(2) }}</td>
+                                <td class="tableexport-string">{{ empleado.ano.cantidad }}</td>
+                                <td class="tableexport-string">$ {{ empleado.ano.valor|number_format(2) }}</td>
                             </tr>
                             {% endfor %}
                         </tbody>
