--- a/app/Views/reports/reports.twig
+++ b/app/Views/reports/reports.twig
@@ -48,7 +48,12 @@
                         <h4 class="panel-title">Reporte de resumen de existencia de mercadería</h4>
                     </div>
                     <div class="panel-body">
-                        <a href="/reportes/resumenexistencia" target="_blank" class="btn btn-block btn-info">Generar Reporte Resumen Total</a>
+                        <form action="/reportes/resumenexistencia" target="_blank">
+                            <label class="checkbox-inline">
+                                <input type="checkbox" name="excel" value="1"> Sacar en Excel
+                            </label>
+                            <button type="submit" class="btn btn-block btn-info">Generar Reporte Resumen Total</button>
+                        </form>
                     </div>
                 </div>
             </div>
@@ -108,6 +113,9 @@
                                     <option value="NombreMarca">Marca</option>
                                 </select>
                             </div>
+                            <label class="checkbox-inline">
+                                <input type="checkbox" name="excel" value="1"> Sacar en Excel
+                            </label>
                             <button type="submit" class="btn btn-block btn-info">Generar Reporte Conteo</button>
                         </form>
                     </div>
