Guarda dato de ingreso por devolucion

--- a/app/Views/products/ingresarproducto.twig
+++ b/app/Views/products/ingresarproducto.twig
@@ -60,6 +60,15 @@
                     </div>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-sm-12">
+                    <div class="checkbox">
+                        <label>
+                            <input type="checkbox" name="esDevolucion" value="1"> Es devolución?
+                        </label>
+                    </div>
+                </div>
+            </div>
             <button type="submit" class="btn btn-block btn-info"><span class="glyphicon glyphicon-plus"></span> Ingresar el Producto</button>
         </form>
     </div>
