--- a/app/Views/invoices/nuevafactura.twig
+++ b/app/Views/invoices/nuevafactura.twig
@@ -102,7 +102,7 @@
                                     <div class="col-sm-3">
                                         <div class="form-group">
                                             <label for="correlativo">Correlativo Manual</label>
-                                            <input type="number" id="correlativo" class="form-control limit-to-max-value limit-to-min-value readonly-disabled" name="correlativo" value="{{ nextCorrelativo }}" data-min="{{ minCorrelativo }}" data-max="{{ maxCorrelativo }}" step="1">
+                                            <input type="number" id="correlativo" class="form-control limit-to-max-value limit-to-min-value readonly-disabled" name="correlativo" value="" data-min="{{ minCorrelativo }}" data-max="{{ maxCorrelativo }}" step="1">
                                         </div>
                                     </div>
                                     <div class="col-sm-3">
