--- a/app/Views/templates/navbar.twig
+++ b/app/Views/templates/navbar.twig
@@ -13,7 +13,7 @@
     </div>
     <div id="main-navbar" class="collapse navbar-collapse">
         <ul class="nav navbar-nav navbar-right">
-            {% set facturacion_urls = [path_for('cotizacion'), path_for('invoices/createform'), path_for('creditofiscal/createform'), path_for('invoices'), path_for('creditofiscal'), path_for('tirajes'), path_for('tirajes/createform')] %}
+            {% set facturacion_urls = [path_for('cotizacion'), path_for('cotizaciones'), path_for('invoices/createform'), path_for('creditofiscal/createform'), path_for('invoices'), path_for('creditofiscal'), path_for('tirajes'), path_for('tirajes/createform')] %}
             <li class="dropdown {% if uri_path in facturacion_urls %}active{% endif %}">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                     <span class="glyphicon glyphicon-list-alt"></span>
@@ -67,6 +67,12 @@
                         </a>
                     </li>
                     {% endif %}
+                    <li class="{% if uri_path == path_for('cotizaciones') %}active{% endif %}">
+                        <a href="{{ path_for('cotizaciones') }}">
+                            <span class="glyphicon glyphicon-save-file"></span>
+                            Ver Cotizaciones
+                        </a>
+                    </li>
                 </ul>
             </li>
             {% set productos_urls = [path_for('products/createform'), path_for('categories/createform'), path_for('products'), path_for('categories'), path_for('brands'), path_for('measurements'), path_for('ingresos')] %}
