--- a/app/Views/templates/navbar.twig
+++ b/app/Views/templates/navbar.twig
@@ -215,6 +215,30 @@
                     </li>
                 </ul>
             </li>
+            {% if is_admin %}
+            {% set deudas_urls = [path_for('listadeudas')] %}
+            <li class="dropdown {% if uri_path in deudas_urls %}active{% endif %}">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                    <span class="glyphicon glyphicon-usd"></span>
+                    Deudas
+                    <span class="caret"></span>
+                </a>
+                <ul class="dropdown-menu">
+                    <li class="{% if uri_path == path_for('warehouses/createform') %}active{% endif %}">
+                        <a href="{{ path_for('warehouses/createform') }}">
+                            <span class="glyphicon glyphicon-plus-sign"></span>
+                            Agregar Factura
+                        </a>
+                    </li>
+                    <li class="{% if uri_path == path_for('listadeudas') %}active{% endif %}">
+                        <a href="{{ path_for('listadeudas') }}">
+                            <span class="glyphicon glyphicon-th-list"></span>
+                            Estados de Cuenta
+                        </a>
+                    </li>
+                </ul>
+            </li>
+            {% endif %}
             <li class="{% if uri_path == path_for('reportes') %}active{% endif %}">
                 <a href="{{ path_for('reportes') }}">
                     <span class="glyphicon glyphicon-th-list"></span>
